--- a/VulcanForWindows/App.xaml
+++ b/VulcanForWindows/App.xaml
@@ -2,7 +2,8 @@
     x:Class="VulcanForWindows.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VulcanForWindows">
+    xmlns:local="using:VulcanForWindows"
+    RequestedTheme="Dark">
     <Application.Resources>
 
         <ResourceDictionary>
