--- a/VulcanForWindows/MainPanelPage.xaml
+++ b/VulcanForWindows/MainPanelPage.xaml
@@ -42,23 +42,17 @@
         </Style>
     </Page.Resources>
     <Grid x:Name="rootGrid">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <!--<Image Source="C:\Users\Marcel\Desktop\SchoolBg.png" 
-               VerticalAlignment="Top" HorizontalAlignment="Stretch" Stretch="UniformToFill"/>-->
-            <!--<Rectangle HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="800">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                    <GradientStop Color="#7F000000" Offset="0.0"/>
-                    <GradientStop Color="#00000000" Offset="1.0"/>
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>-->
-        </Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <VariableSizedWrapGrid Orientation="Vertical" ItemHeight="32" ItemWidth="100" MaxHeight="600" Margin="10">
+        <StackPanel x:Name="InfosPanel" Margin="0,0,5,0" Spacing="1">
+            
+        </StackPanel>
+        
+        <VariableSizedWrapGrid Grid.Row="1"
+            Orientation="Vertical" ItemHeight="32" ItemWidth="100" MaxHeight="600" Margin="10">
             <Grid Style="{StaticResource Panel}" x:Name="AnnouncementsPanel" Padding="0"
               VariableSizedWrapGrid.ColumnSpan="4" VariableSizedWrapGrid.RowSpan="8">
                 <widgets:AnnouncementsWidget/>
