--- a/VulcanForWindows/FinalGradesAnalyzerPage.xaml
+++ b/VulcanForWindows/FinalGradesAnalyzerPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+<Page
     x:Class="VulcanForWindows.FinalGradesAnalyzerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -31,7 +31,7 @@
                                            Foreground="{x:Bind includeInCalculations, Converter={StaticResource BoolToColor}, ConverterParameter=White!Gray, Mode=OneWay}"/>
                             </CheckBox.Content>
                         </CheckBox>
-                        <TextBlock Text="{x:Bind averageDisplay}" Grid.Column="1" VerticalAlignment="Center"
+                        <TextBlock Text="{x:Bind yearActualAverage}" Grid.Column="1" VerticalAlignment="Center"
                                    Foreground="{x:Bind includeInCalculations, Converter={StaticResource BoolToColor}, ConverterParameter=White!Gray, Mode=OneWay}"/>
                         <TextBox Text="{x:Bind displayGrade, Mode=OneWay}" 
                              PlaceholderText="{x:Bind defaultGrade, Mode=OneWay}" 
