--- a/VulcanForWindows/App.xaml
+++ b/VulcanForWindows/App.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VulcanForWindows"
+    xmlns:converters="using:Converters"
     RequestedTheme="Dark">
     <Application.Resources>
 
+        
         <ResourceDictionary>
             
             <ResourceDictionary.MergedDictionaries>
@@ -15,6 +17,8 @@
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
 
+            <converters:UintToColor x:Key="UintToColor"/>
+            
             <x:Double x:Key="ContentDialogMinWidth">300</x:Double>
             <x:Double x:Key="ContentDialogMaxWidth">1200</x:Double>
 
